# Unity-AI-Forge

./: .env.example  .gitignore  .mcp.json  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  BATCH_PROCESSING_EXAMPLES.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md - ショートカット.lnk  MCP.sln  QUICKSTART.md  README.md  README_ja.md  TILEMAP_NAVMESH_TOOLS.md  TOOL_TEST_REPORT.md  TROUBLESHOOTING_IMPROVEMENTS.md  TestLog_Integrity.txt  Tests.csproj  UML_DIAGRAM.md  Unity-AI-Forge.slnx
.claude/: settings.local.json
.claude/skills/AgentSkillForUnity/: pyproject.toml  skill.yml
.claude/skills/AgentSkillForUnity/config/: .env.example  claude-desktop.json.example
.claude/skills/AgentSkillForUnity/setup/: install.ps1  install.sh
.claude/skills/AgentSkillForUnity/src/: logger.py
.claude/skills/AgentSkillForUnity/src/bridge/: messages.py
.claude/skills/AgentSkillForUnity/src/config/: env.py
.claude/skills/AgentSkillForUnity/src/resources/: register_resources.py
.claude/skills/SkillForUnity/: QUICKSTART.md  README.md  SKILL.md  pyproject.toml  skill.yml  test_tools.py  test_tools_comprehensive.py
.gemini/: settings.json
Assets/Editor/MCPBridge/: McpBridgeMessages.cs  McpBridgeService.cs  McpCommandProcessor.cs  McpConstantConverter.cs  McpPendingCommandStorage.cs  (+4 more)
Assets/Runtime/: pyproject.toml
Assets/Runtime/MCPServer/: main.py
Assets/Runtime/MCPServer/tools/: register_tools.py
Assets/Runtime/MCPServer/utils/: project_structure.py
Assets/Runtime/tests/: test_all_tools_comprehensive.py  test_bridge_connector.py  test_resources.py  test_tools.py
Assets/SkillForUnity/: package.json
Assets/UnityAIForge/: package.json
Assets/UnityAIForge/MCPServer/: README.md  pyproject.toml  skill.yml
Assets/UnityAIForge/MCPServer/setup/: configure.py
Assets/UnityAIForge/MCPServer/src/: logger.py  main.py  version.py
Assets/UnityAIForge/MCPServer/src/bridge/: bridge_connector.py  bridge_manager.py  messages.py
Assets/UnityAIForge/MCPServer/src/config/: env.py  port_discovery.py
Assets/UnityAIForge/MCPServer/src/prompts/: __init__.py  loader.py  prompt_definitions.py  register_prompts.py  system_instructions.md  template_loader.py
Assets/UnityAIForge/MCPServer/src/prompts/templates/genre/: action_2d.md  card_game.md  platformer_2d.md  puzzle.md  rpg_turnbased.md  shooter_2d.md  tactics_srpg.md
Assets/UnityAIForge/MCPServer/src/prompts/templates/mechanics/: animation_controller.md  enemy_ai.md  event_channel.md  inventory.md  level_design.md  object_pooling.md  save_load.md  state_machine.md  ui_ux.md
Assets/UnityAIForge/MCPServer/src/prompts/templates/workflow/: alpha.md  beta.md  design.md  feature_implementation.md  planning.md  prefab_quality_check.md  production.md  project_setup.md  prototype.md  prototyping.md  release.md  scene_building.md  scene_structure.md  testing.md  ui_review.md
Assets/UnityAIForge/MCPServer/src/resources/: batch_queue.py  register_resources.py
Assets/UnityAIForge/MCPServer/src/server/: create_mcp_server.py
Assets/UnityAIForge/MCPServer/src/tools/: batch_sequential.py  register_tools.py  tool_definitions.py  tool_registry.py
Assets/UnityAIForge/MCPServer/src/tools/schemas/: __init__.py  common.py  gamekit_core.py  gamekit_pillar.py  gamekit_systems.py  graph.py  high_level_gamekit.py  high_level_logic.py  low_level.py  mid_level.py  mid_level_ui.py  utility.py  visual.py
Assets/UnityAIForge/MCPServer/src/utils/: alert.py  client_detector.py  notification.py
Assets/UnityAIForge/MCPServer/tests/: __init__.py  conftest.py  test_alert.py  test_batch_sequential.py  test_bridge_manager.py  test_client_detector.py  test_config_env.py  test_create_mcp_server.py  test_notification.py  test_port_discovery.py  test_prompts.py  test_rate_limiter.py  test_register_tools.py  test_schemas.py  test_sync_bridge.py  test_tool_definitions.py  test_tool_registry.py
Assets/docs/: MCP_REQUIREMENTS.md  MCP_SETUP.md
Documentation/: CHANGELOG.md  CLAUDE.md  INDEX.md  README.md  README_ja.md
Documentation/Examples/: 01-basic-scene-setup.md  03-game-level.md  README.md
Documentation/GameKit/: GameKitInteraction.README.md  GameKitMachinations.README.md  GameKitResourceManager.README.md  GameKitSceneFlow.README.md  GameKitUICommand.README.md  GraphNodeMovement.README.md  README.md  SplineMovement.README.md
Documentation/Handlers/: CharacterControllerBundle.README.md
Documentation/Installation/: INSTALL_GUIDE.md  QUICKSTART.md
Documentation/MCPServer/: README.md  SKILL.md  SKILL_GAMEKIT.md
Documentation/Testing/: README.md
Editor/MCPBridge/: McpBridgeService.cs  McpBridgeSettings.cs  McpBridgeWindow.cs  McpCommandProcessor.cs  McpContextCollector.cs  ServerInstallerUtility.cs
Runtime/: .env.example  README.md
Runtime/MCPServer/: main.py  version.py
Runtime/tests/: test_tilemap_navmesh.py  test_tools.py
Runtime/unity_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
UserSettings/Layouts/: default-6000.dwlt
docs/: API.md  BRIDGE_CONNECTION_IMPROVEMENTS.md  CLI_REGISTRATION_MIGRATION.md  CODE_REVIEW_REPORT.md  CURSOR_CONFIG_FIX.md  ERROR_CODE_GUIDELINES.md  IMPROVEMENTS_SUMMARY.md  INTERACTIVE_TUTORIAL.md  INTERFACE_EXTRACTION.md  INTERFACE_IMPLEMENTATION_GUIDE.md  MCP_REQUIREMENTS.md  MCP_SETUP.md  PERFORMANCE_METRICS_GUIDELINES.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE4_IMPLEMENTATION_REPORT.md  PHASE4_SUMMARY.md  PHASE6A_IMPLEMENTATION_REPORT.md  PHASE6A_SUMMARY.md  REFACTORING_PLAN.md  SERIALIZEFIELD_IMPLEMENTATION_REPORT.md  SERIALIZEFIELD_TEST.md  TOOLS_REVIEW.md  TOOL_EXAMPLES.md  USER_CONFIGURABLE_INSTALL_PATH.md
tests/: README.md
tests/python/: conftest.py
(+490 files in other folders)
