[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-mcp-server"
version = "0.2.0"
description = "Unity Model Context Protocol server backed by the Unity Editor bridge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.9.4",
  "python-dotenv>=1.0.1",
  "starlette>=0.37.2",
  "uvicorn[standard]>=0.30.5",
  "websockets>=13.1",
]

[project.scripts]
unity-mcp-server = "mcp_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
